--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,27 @@ apply plugin: 'eclipse'
 mainClassName = 'me.shanks.hayabusa.installer.main.Main'
 group project.modGroup //http://maven.apache.org/guides/mini/guide-naming-conventions.html
 
+def getCheckedOutGitCommitHash() {
+    def gitFolder = "$projectDir/.git/"
+    def takeFromHash = 12
+    /*
+     * '.git/HEAD' contains either
+     *      in case of detached head: the currently checked out commit hash
+     *      otherwise: a reference to a file containing the current commit hash
+     */
+    def head = new File(gitFolder + "HEAD").text.split(":") // .git/HEAD
+    def isCommit = head.length == 1 // e5a7c79edabbf7dd39888442df081b1c9d8e88fd
+    // def isRef = head.length > 1     // ref: refs/heads/master
+
+    if(isCommit) return head[0].trim().take(takeFromHash) // e5a7c79edabb
+
+    def refHead = new File(gitFolder + head[1].trim()) // .git/refs/heads/main
+    refHead.text.trim().take takeFromHash
+}
+
 // build constants
 boolean INCREMENT = false // increments version
-boolean UNIQUE = false // adds a random 8-char string to the build number
+boolean UNIQUE = true // adds a random 8-char string to the build number
 // instead of incrementing the last number
 // this is so that we don't get absurdly large numbers
 // maybe only increment the number automatically if CI is ever added to the repo?
@@ -57,6 +75,9 @@ boolean DATE = false // adds the date to the random string
 boolean CLEAR = true // clears other jars in the build folder to stop it from being clogged up
 
 boolean VANILLA = false
+
+String title = getCheckedOutGitCommitHash()
+
 //noinspection GroovyUnusedAssignment
 sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
